--- a/Basic_GAN.ipynb
+++ b/Basic_GAN.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "efOIiNmT7P35"
       },
@@ -31,6 +31,18 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "!wget www.di.ens.fr/~lelarge/MNIST.tar.gz\n",
+        "!tar -zxvf MNIST.tar.gz"
+      ],
+      "metadata": {
+        "id": "7STWmSEVnjxI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "taykLr-U_fOo"
@@ -41,7 +53,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "S50F_UXw9FrB"
       },
@@ -56,7 +68,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "collapsed": true,
         "id": "fkRalW3SNaFY",
@@ -194,7 +206,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "tk_6pSUoUEmj"
       },
@@ -233,7 +245,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "DNj7bhs19dyS"
       },
@@ -256,7 +268,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "t9AwPPMk0PA5"
       },
@@ -279,7 +291,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "whxqDRg-DuSp"
       },
@@ -300,7 +312,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "3ciK9XjZErGm"
       },
@@ -325,7 +337,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "sD8ydfYBZYf-",
         "colab": {
@@ -2964,7 +2976,7 @@
         },
         "outputId": "e3bb3228-0ef4-4c2c-a4b5-9deb3b1a962b"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
